@@ -1199,10 +1199,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|getAnalyzer
+DECL|method|getIndexAnalyzer
 specifier|public
 name|Analyzer
-name|getAnalyzer
+name|getIndexAnalyzer
 parameter_list|()
 block|{
 return|return
