@@ -531,7 +531,7 @@ name|analyzer
 operator|=
 name|fieldType
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 expr_stmt|;
 name|Preconditions
