@@ -130,20 +130,6 @@ name|lucene
 operator|.
 name|document
 operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
 name|Field
 import|;
 end_import
@@ -219,20 +205,6 @@ operator|.
 name|store
 operator|.
 name|Directory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|Bits
 import|;
 end_import
 
@@ -3448,7 +3420,7 @@ name|getAnalyzerInfo
 argument_list|(
 name|ft
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 argument_list|)
 argument_list|)
@@ -4219,7 +4191,7 @@ if|if
 condition|(
 name|ft
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 operator|.
 name|getPositionIncrementGap
@@ -4241,7 +4213,7 @@ literal|"positionIncrementGap"
 argument_list|,
 name|ft
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 operator|.
 name|getPositionIncrementGap
