@@ -82,34 +82,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|document
-operator|.
-name|Document
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexableField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|index
 operator|.
 name|StorableField
@@ -3795,7 +3767,7 @@ name|ts
 init|=
 name|schema
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 operator|.
 name|tokenStream
