@@ -594,10 +594,10 @@ block|}
 decl_stmt|;
 annotation|@
 name|Override
-DECL|method|getAnalyzer
+DECL|method|getIndexAnalyzer
 specifier|public
 name|Analyzer
-name|getAnalyzer
+name|getIndexAnalyzer
 parameter_list|()
 block|{
 return|return
