@@ -1524,18 +1524,6 @@ argument_list|,
 name|args
 argument_list|)
 expr_stmt|;
-name|analyzer
-operator|=
-name|wrappedField
-operator|.
-name|analyzer
-expr_stmt|;
-name|queryAnalyzer
-operator|=
-name|wrappedField
-operator|.
-name|queryAnalyzer
-expr_stmt|;
 block|}
 annotation|@
 name|Override
