@@ -96,24 +96,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|search
-operator|.
-name|suggest
-operator|.
-name|analyzing
-operator|.
-name|AnalyzingSuggester
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|store
 operator|.
 name|FSDirectory
@@ -329,7 +311,7 @@ name|indexAnalyzer
 init|=
 name|ft
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 decl_stmt|;
 name|Analyzer
