@@ -278,7 +278,7 @@ name|indexAnalyzer
 init|=
 name|ft
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 decl_stmt|;
 name|Analyzer
