@@ -1457,7 +1457,7 @@ name|cmd
 argument_list|,
 name|schema
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1483,7 +1483,7 @@ name|luceneDocument
 argument_list|,
 name|schema
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1589,7 +1589,7 @@ name|cmd
 argument_list|,
 name|schema
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1607,7 +1607,7 @@ argument_list|()
 argument_list|,
 name|schema
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2431,7 +2431,7 @@ operator|.
 name|getSchema
 argument_list|()
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 argument_list|)
 expr_stmt|;
