@@ -236,7 +236,7 @@ name|TokenizerChain
 operator|)
 name|type
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 decl_stmt|;
 name|assertEquals
@@ -288,7 +288,7 @@ name|TokenizerChain
 operator|)
 name|type
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 expr_stmt|;
 name|assertEquals
@@ -366,7 +366,7 @@ name|ana1
 init|=
 name|type
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 decl_stmt|;
 name|assertTrue
@@ -401,7 +401,7 @@ name|ana1
 operator|=
 name|type
 operator|.
-name|getAnalyzer
+name|getIndexAnalyzer
 argument_list|()
 expr_stmt|;
 name|assertTrue
